[package]
name = "procshot_server"
version = "0.1.0"
authors = ["nohupped_arch <nohupped@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "This crate can be used to continuously scan over /proc filesystem and write the data to /var/log/procshot/data. This is a wrapper over the procfs crate, so the compatibility of this crate depends on the compatibility of procfs crate."
[dependencies]
procfs = "0.5.3"
bincode = "1.1.4"
serde_derive = "1.0.97"
serde = "1.0.97"
hostname = "0.1.5"
clap = "2.33.0"